force-app/main/default/objects/Customer_Success_Milestone__c/Customer_Success_Milestone__c.object-meta.xml
<CustomObject>
    <label>Customer Success Milestone</label>
    <pluralLabel>Customer Success Milestones</pluralLabel>
    <nameField>
        <displayFormat>CSM-{00000000}</displayFormat>
        <label>Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>