force-app/main/default/objects/Customer_Success_Milestone__c/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding Kickoff</fullName>
                <default>true</default>
                <label>Onboarding Kickoff</label>
            </value>
            <value>
                <fullName>First Value Realized</fullName>
            </value>
            <value>
                <fullName>Adoption Target Met</fullName>
            </value>
            <value>
                <fullName>Executive Business Review</fullName>
            </value>
            <value>
                <fullName>Health Check</fullName>
            </value>
            <value>
                <fullName>Renewal Readiness Review</fullName>
            </value>
            <value>
                <fullName>Expansion Readiness Review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>