force-app/main/default/objects/Customer_Success_Milestone__c/fields/Target_On__c.field-meta.xml
<CustomField>
    <fullName>Target_On__c</fullName>
    <label>Target On</label>
    <type>Date</type>
</CustomField>